tdf#167831 avoid painting bitmap data with zero dimensions

See task, there may be bitmap-filled objects in files that
have a logical size of (0, 0), despite the bitmap having
valid data. That leads to problems *inside* cairo paint,
so I have to test and avoid that.

Change-Id: I18db3b030fb5cdf77caa5afd1bf901095fa1c67b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/189135
Tested-by: Jenkins
Reviewed-by: Armin Le Grand <Armin.Le.Grand@me.com>
(cherry picked from commit cd93f83bbcba0379bf39f3a4e76b955b7fa368b5)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/189187
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>