drawinglayer/source/processor2d/cairopixelprocessor2d.cxx
@@ -1285,6 +1285,17 @@ void CairoPixelProcessor2D::paintBitmapAlpha(const BitmapEx& rBitmapEx,
         return;
     }
 
+    // work with dimensions in discrete target pixels to use evtl. MipMap pre-scale
+    const tools::Long nDestWidth((aLocalTransform * basegfx::B2DVector(1.0, 0.0)).getLength());
+    const tools::Long nDestHeight((aLocalTransform * basegfx::B2DVector(0.0, 1.0)).getLength());
+
+    // tdf#167831 check for output size, may have zero discrete dimension in X and/or Y
+    if (0 == nDestWidth || 0 == nDestHeight)
+    {
+        // it has and is thus invisible
+        return;
+    }
+
     if (maBColorModifierStack.count())
     {
         // need to apply ColorModifier to Bitmap data
@@ -1316,10 +1327,6 @@ void CairoPixelProcessor2D::paintBitmapAlpha(const BitmapEx& rBitmapEx,
         SAL_WARN("drawinglayer", "SDPRCairo: No SurfaceHelper from BitmapEx (!)");
         return;
     }
-
-    // work with dimensions in discrete target pixels to use evtl. MipMap pre-scale
-    const tools::Long nDestWidth((aLocalTransform * basegfx::B2DVector(1.0, 0.0)).getLength());
-    const tools::Long nDestHeight((aLocalTransform * basegfx::B2DVector(0.0, 1.0)).getLength());
 
     cairo_surface_t* pTarget(aCairoSurfaceHelper->getCairoSurface(nDestWidth, nDestHeight));
     if (nullptr == pTarget)
@@ -2412,6 +2419,22 @@ void CairoPixelProcessor2D::processFillGraphicPrimitive2D(
         return;
     }
 
+    // work with dimensions in discrete target pixels to use evtl. MipMap pre-scale
+    const basegfx::B2DHomMatrix aLocalTransform(
+        getViewInformation2D().getObjectToViewTransformation()
+        * rFillGraphicPrimitive2D.getTransformation());
+    const tools::Long nDestWidth(
+        (aLocalTransform * basegfx::B2DVector(aFillUnitRange.getWidth(), 0.0)).getLength());
+    const tools::Long nDestHeight(
+        (aLocalTransform * basegfx::B2DVector(0.0, aFillUnitRange.getHeight())).getLength());
+
+    // tdf#167831 check for output size, may have zero discrete dimension in X and/or Y
+    if (0 == nDestWidth || 0 == nDestHeight)
+    {
+        // it has and is thus invisible
+        return;
+    }
+
     // render tiled using the prepared Bitmap data
     if (maBColorModifierStack.count())
     {
@@ -2449,15 +2472,6 @@ void CairoPixelProcessor2D::processFillGraphicPrimitive2D(
         SAL_WARN("drawinglayer", "SDPRCairo: No SurfaceHelper from BitmapEx (!)");
         return;
     }
-
-    // work with dimensions in discrete target pixels to use evtl. MipMap pre-scale
-    const basegfx::B2DHomMatrix aLocalTransform(
-        getViewInformation2D().getObjectToViewTransformation()
-        * rFillGraphicPrimitive2D.getTransformation());
-    const tools::Long nDestWidth(
-        (aLocalTransform * basegfx::B2DVector(aFillUnitRange.getWidth(), 0.0)).getLength());
-    const tools::Long nDestHeight(
-        (aLocalTransform * basegfx::B2DVector(0.0, aFillUnitRange.getHeight())).getLength());
 
     cairo_surface_t* pTarget(aCairoSurfaceHelper->getCairoSurface(nDestWidth, nDestHeight));
     if (nullptr == pTarget)
